--- a/css/airspace.css
+++ b/css/airspace.css
@@ -580,6 +580,7 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 #portfolio-work .block .portfolio-contant ul li:hover .overly {
   opacity: 1;
+  background-color: #002E5D;
 }
 #portfolio-work .block .portfolio-contant ul li:hover .position-center {
   position: absolute;
@@ -609,12 +610,6 @@ font header .navbar-default .navbar-nav li a:hover {
 #portfolio-work .block .portfolio-contant ul img {
   width: 100%;
   height: auto;
-}
-.static {
-  position: absolute;
-}
-.static:hover {
-  opacity:0;
 }
 #portfolio-work .block .portfolio-contant .overly {
   position: absolute;
