--- a/css/airspace.css
+++ b/css/airspace.css
@@ -584,13 +584,14 @@ font header .navbar-default .navbar-nav li a:hover {
 #portfolio-work .block .portfolio-contant ul li:hover .position-center {
   position: absolute;
   top: 50%;
-  -webkit-transform: translate(0%, 50%);
-  -moz-transform: translate(0%, 50%);
-  -ms-transform: translate(0%, 50%);
-  transform: translate(0%, 50%);
+  left: 10%;
+  -webkit-transform: translate(0%, 45%);
+  -moz-transform: translate(0%, 45%);
+  -ms-transform: translate(0%, 45%);
+  transform: translate(0%, 45%);
   color: #002E5D;
   background-color:rgba(255,255,255,0.75); border-radius: 5px;
-  padding: 10px;
+  padding: 5px;
 }
 #portfolio-work .block .portfolio-contant ul li a {
   display: block;
