--- a/css/airspace.css
+++ b/css/airspace.css
@@ -584,14 +584,14 @@ font header .navbar-default .navbar-nav li a:hover {
 #portfolio-work .block .portfolio-contant ul li:hover .position-center {
   position: absolute;
   top: 50%;
-  left: 10%;
-  -webkit-transform: translate(0%, 45%);
-  -moz-transform: translate(0%, 45%);
-  -ms-transform: translate(0%, 45%);
-  transform: translate(0%, 45%);
+  /* left: 10%; */
+  -webkit-transform: translate(0%, 42%);
+  -moz-transform: translate(0%, 42%);
+  -ms-transform: translate(0%, 42%);
+  transform: translate(0%, 42%);
   color: #002E5D;
   background-color:rgba(255,255,255,0.75); border-radius: 5px;
-  padding: 5px;
+  /* padding: 5px; */
 }
 #portfolio-work .block .portfolio-contant ul li a {
   display: block;
@@ -630,7 +630,7 @@ font header .navbar-default .navbar-nav li a:hover {
 #portfolio-work .block .portfolio-contant .position-center {
   position: absolute;
   top: 50%;
-  left: 10%;
+  /* left: 10%; */
   color: white;
   -webkit-transform: translate(0%, -50%);
   -moz-transform: translate(0%, -50%);
