--- a/css/airspace.css
+++ b/css/airspace.css
@@ -586,7 +586,7 @@ font header .navbar-default .navbar-nav li a:hover {
   text-align: center;
   position: absolute;
   top: 50%;
-  /* left: 10%; */
+  left: 50%;
   -webkit-transform: translate(0%, 42%);
   -moz-transform: translate(0%, 42%);
   -ms-transform: translate(0%, 42%);
@@ -634,7 +634,7 @@ font header .navbar-default .navbar-nav li a:hover {
   text-align: center;
   position: absolute;
   top: 50%;
-  /* left: 10%; */
+  left: 50%;
   color: white;
   -webkit-transform: translate(0%, -50%);
   -moz-transform: translate(0%, -50%);
