--- a/css/airspace.css
+++ b/css/airspace.css
@@ -582,15 +582,15 @@ font header .navbar-default .navbar-nav li a:hover {
   background-color: rgba(0, 46, 93, 0.0);
 }
 #portfolio-work .block .portfolio-contant ul li:hover .position-center {
-  margin: auto;
   text-align: center;
   position: absolute;
   top: 50%;
-  left: 5%;
-  -webkit-transform: translate(0%, 42%);
-  -moz-transform: translate(0%, 42%);
-  -ms-transform: translate(0%, 42%);
-  transform: translate(0%, 42%);
+  left: 50%;
+  margin-right: -50%;
+  -webkit-transform: translate(-50%, 42%);
+  -moz-transform: translate(-50%, 42%);
+  -ms-transform: translate(-50%, 42%);
+  transform: translate(-50%, 42%);
   color: #002E5D;
   background-color:rgba(255,255,255,0.75); border-radius: 5px;
   /* padding: 5px; */
@@ -630,16 +630,16 @@ font header .navbar-default .navbar-nav li a:hover {
   text-align: center;
 }
 #portfolio-work .block .portfolio-contant .position-center {
-  margin: auto;
   text-align: center;
   position: absolute;
   top: 50%;
-  left: 5%;
+  left: 50%;
+  margin-right: -50%;
   color: white;
-  -webkit-transform: translate(0%, -50%);
-  -moz-transform: translate(0%, -50%);
-  -ms-transform: translate(0%, -50%);
-  transform: translate(0%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   -webkit-transition: .5s all;
   -o-transition: .5s all;
   transition: .5s all;
