--- a/css/airspace.css
+++ b/css/airspace.css
@@ -584,7 +584,7 @@ font header .navbar-default .navbar-nav li a:hover {
 #portfolio-work .block .portfolio-contant ul li:hover .position-center {
   text-align: center;
   position: absolute;
-  top: 50%;
+  bottom: 0%;
   left: 50%;
   margin-right: -50%;
   -webkit-transform: translate(-50%, 42%);
