--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ site.baseurl }}/">Home</a></li>
+                <li><a href="{{ site.baseurl }}/#about">About</a></li>
                 <li><a href="{{ site.baseurl }}/teams">Sub Teams</a></li>
                 <li><a href="{{ site.baseurl }}/members">Current Members</a></li>
                 <li><a href="https://aeronautics.byu.edu/DBFguides.jl/dev/">Guides</a></li>
@@ -32,4 +33,17 @@
       </div>
     </div>
   </div>
+
+<div class="banner">
+  <div class="banner__content">
+    <div class="banner__text">
+      Come to our Kick-off Meeting <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210907T230000Z%2F20210908T000000Z&details=Kickoff%20Meeting%20for%20the%20BYU%20AIAA%20Design%20Build%20Fly%20Team.%20We%27ll%20talk%20about%20the%20team%20for%20new%20people%2C%20and%20start%20getting%20ourselves%20oriented%20and%20organized%20and%20ready%20for%20AIAA%20to%20release%20the%20rules%20for%20this%20year.&location=EB%20112%20%28Airplane%20Lab%29&text=BYU%20Design%20Build%20Fly%20Team%20Kickoff" target="_blank">5 PM on Tuesday, September 7th in room EB 112</a>
+    </div>
+    <button class="banner__close" type="button">
+      <span class="material-icons">
+        close
+      </span>
+    </button>
+  </div>
+</div>
 </header><!-- header close -->
