--- a/css/airspace.css
+++ b/css/airspace.css
@@ -932,16 +932,17 @@ footer .footer-manu ul li a:hover {
 
   .banner__content {
     padding: 16px;
-    max-width: 1000px;
+    max-width: 750px;
     margin: 0 auto;
     display: flex;
     align-items: center;
   }
 
   .banner__text {
+    font-size: 20pt;
     flex-grow: 1;
     line-height: 1.4;
-    font-family: "Quicksand", sans-serif;
+    font-family: 'Roboto', sans-serif;
   }
 
   .banner__close {
