--- a/css/airspace.css
+++ b/css/airspace.css
@@ -584,13 +584,13 @@ font header .navbar-default .navbar-nav li a:hover {
 #portfolio-work .block .portfolio-contant ul li:hover .position-center {
   text-align: center;
   position: absolute;
-  top: 50%;
+  bottom: 0%;
   left: 50%;
   margin-right: -50%;
-  -webkit-transform: translate(-50%, 40%);
-  -moz-transform: translate(-50%, 40%);
-  -ms-transform: translate(-50%, 40%);
-  transform: translate(-50%, 40%);
+  -webkit-transform: translate(-50%, 0%);
+  -moz-transform: translate(-50%, 0%);
+  -ms-transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
   color: #002E5D;
   background-color:rgba(255,255,255,0.75); border-radius: 5px;
   padding: 10px;
